traefik-middlewares.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirecthttps
spec:
  redirectScheme:
    scheme: https


---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: admin-basic
spec:
  basicAuth:
    secret: authsecret
