service.yaml

apiVersion: v1
kind: Service
metadata:
  name: traefik-admin-ui
  namespace: default
spec:
  selector:
    app: traefikv2-ingress
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami
